--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>I'm going to write about my bio soon.
+					<p>Just a normal guy.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -109,7 +109,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">ACHS - 2018 - 2021</span>
+									<span class="company">ACHS - 2018 - Present</span>
 								</div>
 								<div class="timeline-body">
 									<p></p>
@@ -168,15 +168,6 @@
 						  </div>
 						</div>
 					</div>
-					
-					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">10%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
-						  </div>
-						</div>
-					</div>
 					<div class="progress-wrap">
 						<h3><span class="name-left">C++</span><span class="value-right">60%</span></h3>
 						<div class="progress">
@@ -215,7 +206,7 @@
 					
 				</div>
 			</div>
-			<center><a href="#ContactMe" class="btn btn-default btn-lg" role="button">Hire Me</a></center>
+			<center><a href="#ContactMe" rel="" id="anchor1" class="btn btn-default btn-lg" role="button">Hire Me</a></center>
 		</div>
 	</div>
 
@@ -228,45 +219,12 @@
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
-			<h2 id="ContactMe">Contact</h2>
-			<form action="#">
-				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-					</div>
-				</div>
-				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<input type="text" id="email" class="form-control" placeholder="Your email address">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<input type="submit" value="Send Message" class="btn btn-primary">
-				</div>
-
-			</form>	
+			<h2 id="ContactMe" id="ContactMe">Contact Me</h2>
+			<ul class="info">
+				<li><span class="first-block">Phone:</span><span class="second-block">+977-9860470294 </span></li>
+				<li><span class="first-block">Email:</span><span class="second-block">norsangpemba@gmail.com</span></li>
+			</ul>
 		</div>
-	</div>
-
-	<div id="map" class="fh5co-map"></div>
 	</div>
 	
 	<div id="fh5co-footer">
@@ -299,7 +257,14 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
+	<script>
+		$('a').click(function(){
+			    $('html, body').animate({
+			        scrollTop: $( $(this).attr('href') ).offset().top
+			    }, 500);
+			    return false;
+			});
+	</script>
 	</body>
 </html>
 
